--- a/main.css
+++ b/main.css
@@ -1,151 +1,144 @@
 /* CSS reset */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+}
+/* Pozicionálás */
+
+.profile-card {
+  width: 600px;
+  max-width: calc(100vw - 30px);
   }
-  /* Pozicionálás */
-  
-  .profile-card {
-    width: 480px;
-    max-width: calc(100vw - 10px);
+
+.head, .links {
+  text-align: center;
+}
+
+img {
+  width: 120px;
+  height: 120px;
+  border-radius: 5%;
+  margin: 10px;
+  padding: 1px;
+  background-color: #666;
+  transition: all 0.5s ease-in-out;
+  filter: grayscale(40%);
+}
+img:hover {
+  transform: scale(1.1);
+  filter: grayscale(20%);
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  display: inline;
+}
+.head, .about {
+  margin-bottom: 10%;
+}
+
+.content {
+  padding: 5%;
   }
+.about:hover {
   
-  .head, .links {
-    text-align: center;
-  }
-  img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    padding: 1px;
-    background-color: #666;
-    transition: all 0.5s ease-in-out;
-    filter: grayscale(50%);
-  }
-  .profile-image {
-    margin-top: -60px;
-  }
-  /* Contact links */
+  text-decoration: underline;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  font-family: 'Nunito Sans', sans-serif;
+  height: 600px;
+  width: 400px;
+  background-color: #DEB887;
+  margin: auto;
+  border-radius: 6px
+}
+
+.profile-card {
+  background-color: hsla(0, 0%, 100%, .5);
+  border-radius: 4px;
+  box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
+}
+
+
+h1 {  
+  font-size: 35px;
+}
+h2 {
+  font-size: 18px;
+
+}
+h3 {
+  font-size: 17px;
   
-  ul {
-    list-style-type: none;
-  }
+}
+h4 {
+  font-size: 17px;
   
-  li {
-    display: inline;
-  }
-  .head, .about {
-    margin-bottom: 10%;
-  }
-  
-  .content {
-    padding: 5% 10%;
-    border-top: 1px solid hsla(0, 0%, 30%, .8);
-  }
-  body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Nunito Sans', sans-serif;
-    background: url('http://i.imgur.com/9kh3G8L.jpg') no-repeat center center fixed;
-    background-size: cover;
-    background-image: url('http://i.imgur.com/9kh3G8L.jpg');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    height: 600px;
-    width: 400px;
-    border: 1px solid #666;
-    background-color: white;
-    padding: 20px 20px;
-    margin: 0 auto;
-    border-radius: 6px
-  }
-  
-  .profile-card {
-    background-color: hsla(0, 0%, 100%, .5);
-    border-radius: 4px;
-    box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
-  }
-  
-  img:hover {
-    transform: scale(1.1);
-    filter: grayscale(20%);
-  }
-  h1 {
-    font-size: 35px;
-  }
-  h2 {
-    font-size: 18px;
-  }
-  h3 {
-    font-size: 17px;
-  }
-  h4 {
-    font-size: 17px;
-    color: #303030;
-  }
-  p {
-    font-size: 16px;
-  }
-  i {
-    color: #303030;
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+}
+p {
+  font-size: 16px;  
+}
+i {
+  color: #2F4F4F;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
