--- a/main.css
+++ b/main.css
@@ -52,9 +52,7 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  font-family: 'Baloo Tamma 2', cursive;  
-  height: auto;
-  width: 400px;
+  font-family: 'Mulish', sans-serif;  width: 400px;
   background-color: #DEB887;
   margin: auto;
   border-radius: 6px
