--- a/main.css
+++ b/main.css
@@ -44,15 +44,15 @@ li {
 }
 
 .content {
-  padding: 5%;
-  }
+margin: 15px;  }
 
 
 body {
-  height: 100vh;
+  height: auto;
   display: flex;
   justify-content: center;
-  font-family: 'Mulish', sans-serif;  width: 400px;
+  font-family: 'Mulish', sans-serif;  
+  width: 400px;
   background-color: #DEB887;
   margin: auto;
   border-radius: 6px
