--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ img {
   padding: 1px;
   background-color: #666;
   transition: all 0.5s ease-in-out;
-  filter: grayscale(40%);
+  filter: grayscale(60%);
 }
 img:hover {
   transform: scale(1.1);
@@ -83,7 +83,9 @@ h4 {
   
 }
 p {
-  font-size: 26px;  
+  font-size: 26px; 
+text-align: left;
+margin: 30px;
 }
 i {
   color: #2F4F4F;
