--- a/main.css
+++ b/main.css
@@ -91,6 +91,13 @@ i {
   color: #2F4F4F;
 }
 
-
+@media screen and (max-width: 300px){
+  .wrapper {
+    font-size: 7vw;
+    padding: 0;
+    width: 80%;
+    margin: 3%;
+   
+    }
 
 
